# Chess

./: CMakeLists.txt  Doxyfile  a.out  bishop.cpp  chess.h  game_board.cpp  game_descriptor.cpp  game_history.cpp  graphics.h  history.txt  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece_texture.cpp  pieces.cpp  queen.cpp  rook.cpp  sfml-app  Диаграмма без названия.drawio
doxygen/html/: annotated.html  chess_8h_source.html  classCHESS_1_1Bishop-members.html  classCHESS_1_1Bishop.html  classCHESS_1_1Game__Descriptor-members.html  classCHESS_1_1Game__Descriptor.html  classCHESS_1_1Game__History-members.html  classCHESS_1_1Game__History.html  classCHESS_1_1King-members.html  classCHESS_1_1King.html  classCHESS_1_1Knight-members.html  classCHESS_1_1Knight.html  classCHESS_1_1Pawn-members.html  classCHESS_1_1Pawn.html  classCHESS_1_1Piece-members.html  classCHESS_1_1Piece.html  classCHESS_1_1Queen-members.html  classCHESS_1_1Queen.html  classCHESS_1_1Rook-members.html  classCHESS_1_1Rook.html  classGame__Board-members.html  classGame__Board.html  classPieceTextures-members.html  classPieceTextures.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graphics_8h_source.html  hierarchy.html  index.html  menudata.js
doxygen/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+16 more)
